RESOLVED FIXED247327
Fix crash in theme painting on macOS if GPU is not available
https://bugs.webkit.org/show_bug.cgi?id=247327
Summary Fix crash in theme painting on macOS if GPU is not available
Per Arne Vollan
Reported 2022-11-01 11:33:34 PDT
Return early in theme painting on macOS if GPU is not available, since we will crash when falling back to OpenGL otherwise.
Attachments
Per Arne Vollan
Comment 1 2022-11-01 11:33:56 PDT
Per Arne Vollan
Comment 2 2022-11-01 11:35:40 PDT
EWS
Comment 3 2022-11-10 10:27:34 PST
Committed 256539@main (829dab614cc1): <https://commits.webkit.org/256539@main> Reviewed commits have been landed. Closing PR #6003 and removing active labels.
Dean Jackson
Comment 4 2022-12-21 12:38:42 PST
*** Bug 247860 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.